提交设计模式、数据结构

--- a/设计模式.md
+++ b/设计模式.md
@@ -5,7 +5,24 @@
 - [1.4 单例模式](#14-单例模式)
 - [1.5 工厂模式](#15-工厂模式)
 - [1.6 建造者模式](#14-建造者模式)
-- [1.5 工厂模式](#15-工厂模式)
+- [1.7 原型模式](#17-原型模式)
+- [1.8 策略模式](#18-策略模式)
+- [1.9 代理模式](#19-代理模式)
+- [1.10 迭代器模式](#110-迭代器模式)
+- [1.11 发布订阅模式](#111-发布订阅模式)
+- [1.12 命令模式](#112-命令模式)
+- [1.13 组合模式](#113-组合模式)
+- [1.14 模板方法模式](#114-模板方法模式)
+- [1.15 享元模式](#115-享元模式)
+- [1.16 职责链模式](#116-职责链模式)
+- [1.17 中介模式](#117-中介模式)
+- [1.18 装饰者模式](#118-装饰者模式)
+- [1.19 状态模式](#119-状态模式)
+- [1.20 适配器模式](#120-适配器模式)
+- [1.21 设计原则编程技巧](#121-设计原则编程技巧)
+- [1.22 MVC](#122-MVC)
+- [1.23 MVP](#123-MVP)
+- [1.24 MVVM](#124-MVVM)
 
 # 一、设计模式
 
@@ -69,7 +86,7 @@ Array.prototype.find = function (findData) {
 ```
 
 
-## 1.4单例模式
+## 1.4 单例模式
 * 普通单例
 >单例模式的定义是：保证一个类仅有一个实例，并提供一个访问它的全局访问点。
 ```js
@@ -244,3 +261,371 @@ let Builder = function () {
 let house1 = new Builder(1, 100, "小清新"); //客户1的需求
 let house2 = new Builder(4, 200, "欧美"); //客户2的需求
 ```
+
+
+## 1.7 原型模式
+>原型模式（Prototype）：用原型实例指定创建对象的种类，并且通过拷贝这些原型创建新的对象。
+>多个类使用到了相同的属性或方法，那我们就可以通过原型继承的方式来创造出类或者实例对象。
+
+```js
+ES6
+//父类
+class Parent {
+  constructor(x) {
+    this.x = x;
+  }
+  showX() {
+    alert(this.x);
+  }
+}//子类1继承
+class ChildA extends Parent {
+  constructor(x, y) {
+    super(x);
+    this.y = y;
+  }
+  showY() {
+    alert(this.y);
+  }
+}//子类2继承
+class ChildB extends Parent {
+  constructor(x, z) {
+    super(x);
+    this.z = z;
+  }
+  showZ() {
+    alert(this.z);
+  }
+}
+```
+
+```js
+ES5
+let obj = {
+  sayHello() {
+    alert("Hello");
+  }
+};
+let objA = Object.create(obj, {
+  name: {
+    writable: true,
+    configurable: true,
+    enumerable: true,
+    value: "AA"
+  }
+});
+let objB = Object.create(obj, {
+  name: {
+    writable: true,
+    configurable: true,
+    enumerable: true,
+    value: "BB"
+  }
+});
+objA.sayHello()
+```
+
+
+## 1.8 策略模式
+>定义一系列的算法，把它们一个个封装起来，并且使它们可以相互替换。
+>一个基于策略模式的程序至少由两部分组成。
+* 第一个部分是一组策略类，策略类封装了具体的算法，并负责具体的计算过程。 
+* 第二个部分是环境类Context，Context 接受客户的请求，随后把请求委托给某一个策略类。要做到这点，说明Context 中要维持对某个策略对象的引用。
+```js
+var strategies = {
+  //策略类
+  "S": function( salary ){
+  return salary * 4;    },
+  "A": function( salary ){
+    return salary * 3;
+  },
+  "B": function( salary ){
+    return salary * 2;
+  }
+};
+//环境类Context
+var calculateBonus = function( level, salary ){//接受客户的请求
+  return strategies[ level ]( salary );//委托类
+};
+console.log( calculateBonus( 'S', 20000 ) ); // 输出：80000
+console.log( calculateBonus( 'A', 10000 ) ); // 输出：30000
+```
+>我们目标是编写一个动画类和一些缓动算法，让小球以各种各样的缓动效果在页面中运动。
+
+>用setInterval 创建一个定时器，定时器每隔17ms 循环一次。在定时器的每一帧里，我们会把动画已消耗的时间、小球原始位置、小球目标位置和动画持续的总时间等信息传入缓动算法。该算法会通过这几个参数，计算出小球当前应该所在的位置。最后再更新该div 对应的CSS 属性，小球就能够顺利地运动起来了
+```js
+var tween = {
+  linear: function (t, b, c, d) {
+    return c * t / d + b;
+  },
+  easeIn: function (t, b, c, d) {
+    return c * (t /= d) * t + b;
+  },
+  strongEaseIn: function (t, b, c, d) {
+    return c * (t /= d) * t * t * t * t + b;
+  },
+  strongEaseOut: function (t, b, c, d) {
+    return c * ((t = t / d - 1) * t * t * t * t + 1) + b;
+  },
+  sineaseIn: function (t, b, c, d) {
+    return c * (t /= d) * t * t + b;
+  },
+  sineaseOut: function (t, b, c, d) {
+    return c * ((t = t / d - 1) * t * t + 1) + b;
+  }
+};
+
+var Animate = function (dom) {
+    this.dom = dom; // 进行运动的dom 节点
+    this.startTime = 0; // 动画开始时间
+    this.startPos = 0; // 动画开始时，dom 节点的位置，即dom 的初始位置
+    this.endPos = 0; // 动画结束时，dom 节点的位置，即dom 的目标位置
+    this.propertyName = null; // dom 节点需要被改变的css 属性名
+    this.easing = null; // 缓动算法
+    this.duration = null; // 动画持续时间
+  };
+
+Animate.prototype.start = function (propertyName, endPos, duration, easing) {
+  this.startTime = +new Date; // 动画启动时间
+  this.startPos = this.dom.getBoundingClientRect()[propertyName]; // dom 节点初始位置
+  this.propertyName = propertyName; // dom 节点需要被改变的CSS 属性名
+  this.endPos = endPos; // dom 节点目标位置
+  this.duration = duration; // 动画持续事件
+  this.easing = tween[easing]; // 缓动算法
+  var self = this;
+  var timeId = setInterval(function () { // 启动定时器，开始执行动画
+    if (self.step() === false) { // 如果动画已结束，则清除定时器
+      clearInterval(timeId);
+    }
+  }, 19);
+};
+Animate.prototype.step = function () {
+  var t = +new Date; // 取得当前时间
+  if (t >= this.startTime + this.duration) { // (当时间超出了动画的时间上限的时候, 就停下了一直保持最终的状态)
+    this.update(this.endPos); // 更新小球的CSS 属性值
+    return false;
+  }
+  var pos = this.easing(t - this.startTime, this.startPos,
+    this.endPos - this.startPos, this.duration);//得到当前时间下,于选择的缓动动画模式中所计算出来的位置
+  // pos 为小球当前位置
+  this.update(pos); // 更新小球的CSS 属性值
+};
+Animate.prototype.update = function( pos ){
+  this.dom.style[ this.propertyName ] = pos + 'px';
+};
+var div = document.getElementById('div');
+var animate = new Animate(div);
+animate.start('left', 500, 3000, 'sineaseIn');
+```
+
+## 1.9 代理模式
+>代理模式是为一个对象提供一个代用品或占位符，以便控制对它的访问。
+
+>代理模式的关键是，当客户不方便直接访问一个对象或者不满足需要的时候，提供一个替身对象来控制对这个对象的访问，客户实际上访问的是替身对象。替身对象对请求做出一些处理之后，再把请求转交给本体对象。
+
+* 保护代理
+>当客户发送至代理的一个请求在经过分析后觉得不符合条件, 结果被拒绝了, 这个就是保护代理
+
+* 虚拟代理
+>当客户发送至代理的一个请求, 该请求需要代理判断某些条件满足后才会向目标发送最终的指令, 那么这个就是虚拟代理
+
+* 虚拟代理实现懒加载
+```js
+var myImage = (function () {
+  var imgNode = document.createElement('img');
+  document.body.appendChild(imgNode);
+  return {
+    setSrc: function (src) {
+      imgNode.src = src;
+    }
+  }
+})();
+var proxyImage = (function () {
+  var img = new Image;
+  img.onload = function () {
+    myImage.setSrc(this.src);
+  };
+  return {
+    setSrc: function (src) {
+      myImage.setSrc('https://ss2.bdstatic.com/70cFvnSh_Q1YnxGkpoWK1HF6hhy/it/u=3361879810,3578970602&fm=26&gp=0.jpg');
+      img.src = src;
+    }
+  }
+})();
+proxyImage.setSrc('https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1605261186915&di=a8e4c247834f9fac31e6023c633a341b&imgtype=0&src=http%3A%2F%2Fwx3.sinaimg.cn%2Flarge%2F0072FdYkly1g05qsqqdj2j31i10u0npf.jpg');
+```
+
+* 缓存代理
+>缓存代理可以为一些开销大的运算结果提供暂时的存储，在下次运算时，如果传递进来的参数跟之前一致，则可以直接返回前面存储的运算结果。
+```js
+var mult = function () {
+  console.log('开始计算乘积');
+  var a = 1;
+  for (var i = 0, l = arguments.length; i < l; i++) {
+    a = a * arguments[i];
+  }
+  return a;
+};
+var proxyMult = (function () {
+  var cache = {};
+  return function () {
+    var args = Array.prototype.join.call(arguments, ',');
+    if (args in cache) {
+      return cache[args];
+    }
+    return cache[args] = mult.apply(this, arguments);
+  }
+})();
+proxyMult(1, 2, 3, 4); // 输出：24
+proxyMult( 1, 2, 3, 4 ); // 输出：24
+```
+
+## 1.10 迭代器模式
+>迭代器模式是指提供一种方法顺序访问一个聚合对象中的各个元素，而又不需要暴露该对象的内部表示。
+```js
+ ['hello', 'world'],
+  [Symbol.iterator]() {
+    const self = this;
+    let index = 0;
+    return {
+      next() {
+        if (index < self.data.length) {
+          return {
+            value: self.data[index++],
+            done: false
+          };
+        } else {
+          return {
+            value: undefined,
+            done: true
+          };
+        }
+      }
+    };
+  }
+};
+for(let item of obj){console.log(item)}
+```
+
+## 1.11 发布订阅模式
+>订阅模式又叫观察者模式，它定义对象间的一对多的依赖关系，当一个对象的状态发生改变时，所有依赖于它的对象都将得到通知
+* 发布—订阅模式可以广泛应用于异步编程中，这是一种替代传递回调函数的方案
+* 发布—订阅模式可以取代对象之间硬编码的通知机制，一个对象不用再显式地调用另外一个对象的某个接口
+```js
+// 核心的发布订阅逻辑
+var Event = (function(){
+  var clientList = {}, listen, trigger, remove;
+  listen = function (key, fn) {
+    if (!clientList[key]) {
+      clientList[key] = [];
+    }
+    clientList[key].push(fn); // 订阅的消息添加进缓存列表
+  };
+  trigger = function () {
+    var key = Array.prototype.shift.call(arguments),
+      fns = clientList[key];
+    if (!fns || fns.length === 0) { // 如果没有绑定对应的消息
+      return false;
+    }
+    for (var i = 0, fn; fn = fns[i++];) {
+      fn.apply(this, arguments); // arguments 是trigger 时带上的参数
+    }
+  };
+  remove = function (key, fn) {
+    var fns = clientList[key];
+    if (!fns) { // 如果key 对应的消息没有被人订阅，则直接返回
+      return false;
+    }
+    if (!fn) { // 如果没有传入具体的回调函数，表示需要取消key 对应消息的所有订阅
+      fns && (fns.length = 0);
+    } else {
+      for (var l = fns.length - 1; l >= 0; l--) { // 反向遍历订阅的回调函数列表
+        var _fn = fns[l];
+        if (_fn === fn) {
+          fns.splice(l, 1); // 删除订阅者的回调函数
+        }
+      }
+    }
+  };
+  return {
+    listen, trigger, remove
+  }
+})()
+
+//激活代码;
+var xiaoming;
+Event.listen('squareMeter88', xiaoming = function (price) { // 小明订阅消息
+  console.log( '价格= ' + price );
+});
+Event.listen( 'squareMeter100', function( price ){ // 小红订阅消息
+  console.log( '价格= ' + price );
+});
+Event.trigger( 'squareMeter88', 2000000 ); // 输出：2000000
+Event.trigger( 'squareMeter100', 3000000 ); // 输出：3000000
+
+Event.remove( 'squareMeter88',xiaoming);
+Event.trigger( 'squareMeter88', 2000000 ); // 输出：false
+```
+
+
+## 1.12 命令模式
+
+## 1.13 组合模式
+
+## 1.14 模板方法模式
+
+## 1.15 享元模式
+
+## 1.16 职责链模式
+
+## 1.17 中介模式
+
+## 1.18 装饰者模式
+
+## 1.19 状态模式
+
+## 1.20 适配器模式
+
+## 1.21 设计原则编程技巧
+
+## 1.22 MVC
+* MVC定义
+>MVC是一个架构设计模式，它通过分离关注点的方式来支持改进应用组织方式。它促成了业务数据(Models)从用户界面(Views)中分离出来，还有第三个组成部分(Controllers)负责管理传统意义上的业务逻辑和用户输入
+
+* MVC的优缺点
+
+MVC模式的优点：
+
+将每个逻辑分开，降低了耦合，可以各个模块分别开发，降低了开发和后期维护的成本。
+
+MVC模式的缺点：
+
+1 结构的分离带来的结果还有代码更多更复杂，所以小型的需求使用MVC是没有必要的，这样写起来反而会更难受。
+
+2 控制层和视图层其实是没有真正的分离的，假设我们点击的案例也会变化的话，就还需要在view再获取按钮等等操作。但是这个问题是可以被解决的，也就是后面衍生出的各种 MV* ，都是在MVC的原理基础上扩展出来的。
+
+## 1.23 MVP
+>M（model）模型 —— V（view）视图 —— P（presenter）管理者，基于MVC模式衍生出的一种结构分离模式。
+
+>与MVC不同在于，Model不再与View直接联系了，也就是说数据更新之后是告知Presenter的，然后P再通知V进行视图的改变。
+
+>这样的结构可以完全的解开 M 和 V 的耦合，当数据和view的交互比较复杂的时候使用这种模式会更好，同时也更加的便于数据和视图的单独维护。
+
+## 1.24 MVVM
+
+>View的变化会自动更新到ViewModel , ViewModel的变化也会自动同步到View上显示。这种自动同步是因为ViewModel中的属性实现了Observer( 观察者模式 )，当属性变更时都能触发对应的操作. 
+
+>它目的在于更清楚地将用户界面（UI）的开发与 应用程序中业务逻辑和行为的开发区分开来。所以，MVVM模式的许多实现都使用声明性 数据绑定来允许从其他层分离视图上的工作。
+
+>Vue采用数据劫持&发布-订阅模式的方式，通过ES5提供的 Object.defineProperty() 方法来劫持（监控）各属性的 getter 、setter ，并在数据（对象）发生变动时通知订阅者，触发相应的监听回调。
+
+>并且，由于是在不同的数据上触发同步，可以精确的将变更发送给绑定的视图，而不是对所有的数据都执行一次检测。
+
+>要实现Vue中的双向数据绑定，大致可以划分三个模块：Compile、Observer、Watcher
+
+>要得知一个数据的值是否有变化, 那么我们除了使用ES6的proxy之外就是ES5的设置数据属性get和set
+
+>对于数据值是对象等复杂结构的引用类型的值, 需要通过迭代一个个监听
+
+>数据变化了，就要告诉视图重新编译模板，那么编译模板和数据劫持之间就需要一个关联，那就是Watcher。而Compile和Observer的具体通信靠的就是订阅者
+
+
