提交数据结构.md

--- a/数据结构.md
+++ b/数据结构.md
@@ -3,10 +3,12 @@
 - [1.2 队列](#12-队列)
 - [1.3 链表](#13-链表)
 - [1.4 集合](#14-集合)
-- [1.5 字典和散列表](#15-字典和散列表)
-- [1.6 递归](#14-递归)
-- [1.7 树](#17-树)
-- [1.8 图](#18-图)
+- [1.5 字典](#15-字典)
+- [1.6 散列表](#16-散列表)
+- [1.7 递归](#17-递归)
+- [1.8 树](#18-树)
+- [1.9 二叉堆](#19-二叉堆)
+- [2.0 图](#20-图)
 
 # 一、数据结构
 ## 1.1 栈
@@ -631,3 +633,450 @@ class DBLinkedList {
   }
 }
 ```
+
+## 1.4 集合
+>集合是由一组无序且唯一（即不能重复）的项组成的。该数据结构使用了与有限集合相同的数学概念，但应用在计算机科学的数据结构中。
+
+>当前ES6给我们提供了set结构, 天生就实现了集合的效果
+
+>接下来，需要声明一些集合可用的方法（我们会尝试模拟与ECMAScript 2015 实现相同的Set 类）。
+* 我们也会实现集合运算，例如并集、交集和差集。
+
+  * add(element)：向集合添加一个新元素。
+  * delete(element)：从集合移除一个元素。
+  * has(element)：如果元素在集合中，返回true，否则返回false。
+  * clear()：移除集合中的所有元素。
+  * size()：返回集合所包含元素的数量。它与数组的length 属性类似。
+  * values()：返回一个包含集合中所有值（元素）的数组。
+```js
+class set {
+  constructor() {
+    this.items = {}; //存储集合内的基本数据
+  }
+  has(element) {
+    return Object.prototype.hasOwnProperty.call(this.items, element); // 此处采取的是判断key是否存在
+  }
+  add(element) {
+    if (!this.has(element)) {
+      this.items[element] = element; //
+      return true;
+    }
+    return false;
+  }
+  delete(element) {
+    if (this.has(element)) {
+      delete this.items[element];
+      return true;
+    }
+    return false;
+  }
+  clear() {
+    this.items = {}
+  }
+  size() {
+    return Object.keys(this.items).length; // 直接获取所有的key, 然后根据key的个数,来判断集合内元素的个数
+  };
+  sizeLegacy() { // 这种的也阔以, 就是麻烦了些
+    let count = 0;
+    for (let key in this.items) {
+      if (this.items.hasOwnProperty(key)) {
+        count++;
+      }
+    };
+    return count;
+  }
+  values() {
+    return Object.values(this.items);
+  }
+  values() { // 在任何浏览器中都能执行
+    let values = [];
+    for (let key in this.items) {
+      if (this.has(key)) {
+        values.push(this.items[key])
+      }
+    }
+    return values;
+  }
+  union(otherSet) { //并集
+    const unionSet = new Set();
+    this.values().forEach(value => unionSet.add(value));
+    otherSet.values().forEach(value => unionSet.add(value));
+    return unionSet;
+  }
+  intersection(otherSet) { // 交集
+    const intersectionSet = new Set();
+    const values = this.values();
+    const otherValues = otherSet.values();
+    let biggerSet = values;
+    let smallerSet = otherValues;
+    if (otherValues.length - values.length > 0) {
+      biggerSet = otherValues;
+      smallerSet = values;
+    }
+    smallerSet.forEach(value => {
+      if (biggerSet.includes(value)) {
+        intersectionSet.add(value);
+      }
+    });
+    return intersectionSet;
+  }
+  difference(otherSet) { // 并集
+    const differenceSet = new Set();
+    this.values().forEach(value => {
+      if (!otherSet.has(value)) {
+        differenceSet.add(value);
+      }
+      return differenceSet;
+    });
+  }
+  isSubsetOf(otherSet) { // 子集
+    if (this.size() > otherSet.size()) {
+      return false;
+    }
+    let isSubset = true;
+    this.values().every(value => {
+      if (!otherSet.has(value)) {
+        isSubset = false;
+        return false;
+      }
+      return true;
+    });
+    return isS
+  } 
+}
+```
+* 并集：对于给定的两个集合，返回一个包含两个集合中所有元素的新集合。
+* 交集：对于给定的两个集合，返回一个包含两个集合中共有元素的新集合。
+* 差集：对于给定的两个集合，返回一个包含所有存在于第一个集合且不存在于第二个集合的元素的新集合。
+* 子集：验证一个给定集合是否是另一集合的子集。
+
+### 并集
+```js
+const setA = new Set();
+setA.add(1);
+setA.add(2);
+setA.add(3);
+const setB = new Set();
+setB.add(3);
+setB.add(4);
+setB.add(5);
+setB.add(6);
+const unionAB = setA.union(setB);
+console.log(unionAB.values());
+```
+
+## 1.5 字典和散列表
+
+* 字典
+
+>在字典中，存储的是[键，值]对，其中键名是用来查询特定元素的。字典和集合很相似，集合以[值，值]的形式存储元素，字典则是以[键，值]的形式来存储元素。字典也称作映射、符号表或关联数组。
+在JS中map就是典型的字典结构
+
+* 我们需要声明一些映射/字典所能使用的方法。
+  * set(key,value)：向字典中添加新元素。如果key 已经存在，那么已存在的 value 会被新的值覆盖。
+  * remove(key)：通过使用键值作为参数来从字典中移除键值对应的数据值。
+  * hasKey(key)：如果某个键值存在于该字典中，返回true，否则返回false。
+  * get(key)：通过以键值作为参数查找特定的数值并返回。
+  * clear()：删除该字典中的所有值。
+  * size()：返回字典所包含值的数量。与数组的length 属性类似。
+  * isEmpty()：在size 等于零的时候返回true，否则返回false。
+  * keys()：将字典所包含的所有键名以数组形式返回。
+  * values()：将字典所包含的所有数值以数组形式返回。
+  * keyValues()：将字典中所有[键，值]对返回。
+  * forEach(callbackFn)：迭代字典中所有的键值对。callbackFn 有两个参数：key 和value。该方法可以在回调函数返回false 时被中止（和Array 类中的every 方法相似）。
+
+```js
+class Dictionary {
+  constructor() {
+    this.table = {};
+  }
+
+  size() {
+    return Object.keys(this.table).length;
+  }
+  isEmpty() {
+    return this.size() === 0;
+  }
+  clear() {
+    this.table = {};
+  }
+  toString() {
+    if (this.isEmpty()) {
+      return '';
+    }
+    const valuePairs = this.keyValues();
+    let objString = `${valuePairs[0].toString()}`;
+    for (let i = 1; i < valuePairs.length; i++) {
+      objString = `${objString},${valuePairs[i].toString()}`;
+    }
+    return objString;
+  }
+  toStringKey(item) {
+    if (item === null) {
+      return 'NULL';
+    } else if (item === undefined) {
+      return 'UNDEFINED';
+    } else if (typeof item === 'string' || item instanceof String) {
+      return `${item}`;
+    }
+    return item.toString();
+  }
+  hasKey(key) {
+    return this.table[this.toString(key)] !== undefined;
+  }
+  set(key, value) {
+    if (key != null && value != null) {
+      const tableKey = this.toString(key);
+      this.table[tableKey] = new ValuePair(key, value);
+      return true;
+    }
+    return false;
+  }
+  get(key) {
+    const valuePair = this.table[this.toString(key)];
+    return valuePair == null ? undefined : valuePair.value;
+  }
+  remove(key) {
+    if (this.hasKey(key)) {
+      delete this.table[this.toString(key)];
+      return true;
+    }
+    return false;
+  } 
+  keyValues() {
+    const valuePairs = [];
+    for (const k in this.table) {
+      if (this.hasKey(k)) {
+        valuePairs.push(this.table[k]);
+      }
+    }
+    return valuePairs;
+  }
+  keys() {
+    return this.keyValues().map(valuePair => valuePair.key);
+  }
+  values() {
+    return this.keyValues().map(valuePair => valuePair.value);
+  }
+  forEach(callbackFn) {
+    const valuePairs = this.keyValues();
+    for (let i = 0; i < valuePairs.length; i++) {
+      const result = callbackFn(valuePairs[i].key, valuePairs[i].value);
+      if (result === false) {
+        break;
+      }
+    }
+  }
+}
+class ValuePair {
+  constructor(key, value) {
+    this.key = key;
+    this.value = value;
+  }
+  toString() {
+    return `[#${this.key}: ${this.value}]`;
+  }
+}
+```
+
+
+## 1.6 散列表
+> 散列算法的作用是尽可能快地在数据结构中找到一个值。在之前的章节中，你已经知道如果要在数据结构中获得一个值（使用get 方法），需要迭代整个数据结构来找到它。如果使用散列函数，就知道值的具体位置，因此能够快速检索到该值。散列函数的作用是给定一个键值，然后返回值在表中的地址。
+
+>JavaScript 语言内部就是使用散列表来表示每个对象。此时，对象的每个属性和方法（成员）被存储为key 对象类型，每个key 指向对应的对象成员。
+
+* 散列表普通实现：
+```js
+class HashTable {
+  constructor() {
+    this.table = {};
+  }
+  put(key, value) {
+    if (key != null && value != null) {
+      const position = this.hashCode(key);
+      this.table[position] = new ValuePair(key, value);
+      return true;
+    }
+    return false;
+  }
+  get(key) {
+    const valuePair = this.table[this.hashCode(key)];
+    return valuePair == null ? undefined : valuePair.value;
+  }
+  remove(key) {
+    const hash = this.hashCode(key);
+    const valuePair = this.table[hash];
+    if (valuePair != null) {
+      delete this.table[hash];
+      return true;
+    }
+    return false;
+  }
+  toStrFn(item) {
+    if (item === null) {
+      return 'NULL';
+    } else if (item === undefined) {
+      return 'UNDEFINED';
+    } else if (typeof item === 'string' || item instanceof String) {
+      return `${item}`;
+    }
+    return item.toString();
+  }
+  loseloseHashCode(key) {
+    if (typeof key === 'number') {
+      return key;
+    }
+    const tableKey = this.toStrFn(key);
+    let hash = 0;
+    for (let i = 0; i < tableKey.length; i++) {
+      hash += tableKey.charCodeAt(i);
+    }
+    return hash % 37; // 37是关键码 可能会出现冲突的值
+  }
+  hashCode(key) {
+    return this.loseloseHashCode(key);
+  }
+}
+```
+```js
+const hash = new HashTable();
+hash.put('Ygritte', 'ygritte@email.com');//4
+hash.put('Jonathan', 'jonathan@email.com');//5
+hash.put('Jamie', 'jamie@email.com');//5
+hash.put('Jack', 'jack@email.com');//7
+hash.put('Jasmine', 'jasmine@email.com');//8
+hash.put('Jake', 'jake@email.com');//9
+hash.put('Nathan', 'nathan@email.com');//10
+hash.put('Athelstan', 'athelstan@email.com');//7
+hash.put('Sue', 'sue@email.com');//5
+hash.put('Aethelwulf', 'aethelwulf@email.com');//5
+hash.put('Sargeras', 'sargeras@email.com');//10
+```
+
+* 散列表中的冲突处理之分离链接
+```js
+// 相当于一个key存一个链表
+// 重写put、 get、remove
+put(key, value) {
+  if (key != null && value != null) {
+    const position = this.hashCode(key);
+    if (this.table[position] == null) {
+      this.table[position] = new LinkedList();
+    }
+    this.table[position].push(new ValuePair(key, value));
+    return true;
+  }
+  return false;
+}
+get(key) {
+  const position = this.hashCode(key);
+  const linkedList = this.table[position];
+  if (linkedList != null && !linkedList.isEmpty()) {
+    let current = linkedList.getHead();
+    while (current != null) {
+      if (current.element.key === key) {
+        return current.element.value;
+      }
+      current = current.next;
+    }
+  }
+  return undefined;
+}
+remove(key) {
+  const position = this.hashCode(key);
+  const linkedList = this.table[position];
+  if (linkedList != null && !linkedList.isEmpty()) {
+    let current = linkedList.getHead();
+    while (current != null) {
+      if (current.element.key === key) {
+        linkedList.remove(current.element);
+        if (linkedList.isEmpty()) {
+          delete this.table[position];
+        }
+        return true;
+      }
+      current = current.next;
+    }
+  }
+  return false;
+}
+````
+
+* 散列表中的冲突处理之线性探查
+>之所以称作线性，是因为它处理冲突的方法是将元素直接存储到表中，而不是在单独的数据结构中。
+>当想向表中某个位置添加一个新元素的时候，如果索引为position 的位置已经被占据了就尝试position+1 的位置。如果position+1 的位置也被占据了，就尝试position+2 的位置，以此类推，直到在散列表中找到一个空闲的位置。
+>想象一下，有一个已经包含一些元素的散列表，我们想要添加一个新的键和值。我们计算这个新键的hash，并检查散列表中对应的位置是否被占据。如果没有，我们就将该值添加到正确的位置。如果被占据了，我们就迭代散列表，直到找到一个空闲的位置。
+
+```js
+// 太复杂了先不总结了
+```
+
+## 1.7 递归
+>递归是一种解决问题的方法，它从解决问题的各个小部分开始，直到解决最初的大问题。递归通常涉及函数调用自身
+
+* 递归案例之阶乘计算
+```js
+function factorial(n) {
+  if (n === 1 || n === 0) { // 基线条件
+    return 1;
+  }
+  return n * factorial(n - 1); // 递归调用
+}
+```
+* 测试浏览器最大的引用栈的数量
+```js
+let i = 0;
+function recursiveFn() {
+  i++;
+  recursiveFn();
+}
+try {
+  recursiveFn();
+} catch (ex) {
+  console.log('i = ' + i + ' error: ' + ex);
+}
+```
+
+* 递归案例之斐波那契数列
+>斐波那契数列是另一个可以用递归解决的问题。它是一个由0、1、1、2、3、5、8、13、21、34 等数组成的序列。数2 由1 + 1 得到，数3 由1 + 2 得到，数5 由2 + 3 得到，以此类推。斐波那契数列的定义如下。
+
+* 位置0 的斐波那契数是零。
+* 1 和2 的斐波那契数是1。
+* n（此处n > 2）的斐波那契数是（n  1）的斐波那契数加上（n  2）的斐波那契数。
+
+```js
+// 迭代版（速度最快，但对于一些算法来说，可能不能用）
+function fibonacciIterative(n) {
+  if (n < 1) return 0;
+  if (n <= 2) return 1;
+  let fibNMinus2 = 0;
+  let fibNMinus1 = 1;
+  let fibN = n;
+  for (let i = 2; i <= n; i++) { // n >= 2
+    fibN = fibNMinus1 + fibNMinus2; // f(n-1) + f(n-2)
+    fibNMinus2 = fibNMinus1;
+    fibNMinus1 = fibN;
+  }
+  return fibN;
+}
+//带有记忆功能的函数, 尾部调用法递归（节省计算速度）
+function fibonacciMemoization(n) {
+  const memo = [0, 1];
+  const fibonacci = (n) => {
+    if (memo[n] != null) return memo[n];
+    return memo[n] = fibonacci(n - 1) + fibonacci(n - 2);
+  };
+  console.log(memo);
+  return fibonacci(n);
+}
+// 递归版（最慢）
+function fibonacci(n) { 
+  if (n < 1) return 0;
+  if (n <= 2) return 1;
+  return fibonacci(n - 1) + fibonacci(n - 2);
+}
+```
+## 1.7 树
+子树：子树由节点和它的后代构成
+节点的深度：节点的深度取决于它的祖先节点的数量
+树的高度：取决于所有节点深度的最大值
