--- a/数据结构.md
+++ b/数据结构.md
@@ -765,7 +765,7 @@ const unionAB = setA.union(setB);
 console.log(unionAB.values());
 ```
 
-## 1.5 字典和散列表
+## 1.5 字典
 
 * 字典
 
@@ -1077,6 +1077,8 @@ function fibonacci(n) {
 }
 ```
 ## 1.7 树
-子树：子树由节点和它的后代构成
+* 二叉树：节点最多只能有两个子节点：一个是左侧子节点，另一个是右侧子节点。这个定义有助于我们写出更高效地在树中插入、查找和删除节点的算法。二叉树在计算机科学中的应用非常广泛。
+* 子树：子树由节点和它的后代构成
 节点的深度：节点的深度取决于它的祖先节点的数量
-树的高度：取决于所有节点深度的最大值
+* 树的高度：取决于所有节点深度的最大值
+* 二叉搜索树（BST）：是二叉树的一种，但是只允许你在左侧节点存储（比父节点）小的值，在右侧节点存储（比父节点）大的值。右图中就展现了一棵二叉搜索树
