--- a/数据结构.md
+++ b/数据结构.md
@@ -1082,3 +1082,176 @@ function fibonacci(n) {
 节点的深度：节点的深度取决于它的祖先节点的数量
 * 树的高度：取决于所有节点深度的最大值
 * 二叉搜索树（BST）：是二叉树的一种，但是只允许你在左侧节点存储（比父节点）小的值，在右侧节点存储（比父节点）大的值。右图中就展现了一棵二叉搜索树
+* 键是树相关的术语中对节点的称呼。
+```js
+class Node {
+  constructor(key) {
+    this.key = key; //  节点值
+    this.left = null; // 左侧子节点引用
+    this.right = null; // 右侧子节点引用
+  }
+}
+```
+* 我们需要实现一些方法。下面是将要在BinarySearchTree 类中实现的方法。
+  *   insert(key)：向树中插入一个新的键。
+  *   search(key)：在树中查找一个键。如果节点存在，则返回true；如果不存在，则返回*  false。
+  *   inOrderTraverse()：通过中序遍历方式遍历所有节点。
+  *   preOrderTraverse()：通过先序遍历方式遍历所有节点。
+  *   postOrderTraverse()：通过后序遍历方式遍历所有节点。
+  *   min()：返回树中最小的值/键。
+  *   max()：返回树中最大的值/键。
+  *   remove(key)：从树中移除某个键。
+
+```js
+const Compare = {
+  LESS_THAN: -1,
+  BIGGER_THAN: 1
+};
+class BinarySearchTree {
+  constructor() {
+    this.root = null; //  Node 类型的根节点 默认就是null
+  }
+  compareFn(a, b){
+    if (a === b) { //
+      return 0;
+    }
+    return a < b ? Compare.LESS_THAN :Compare.BIGGER_THAN; 
+    // 比较函数, a<b返回-1. 大于则返回正1
+  }
+  insert(key) {
+    if (this.root == null) {
+      this.root = new Node(key);
+    } else {
+      this.insertNode(this.root, key); // 因为不确定具体的插入位置因此采取递归的方法, 那么就需要讲此处逻辑进行封装
+    }
+  }
+  insertNode(node, key) {
+    // 采取递归思维进行递归遍历法
+    if (this.compareFn(key, node.key) === Compare.LESS_THAN) {
+      if (node.left == null) {
+        node.left = new Node(key);
+      } else {
+        this.insertNode(node.left, key);
+      }
+    } else {
+      if (node.right == null) {
+        node.right = new Node(key);
+      } else {
+        this.insertNode(node.right, key);
+      }
+    }
+  }
+  inOrderTraverse(callback) { // 中序遍历
+    this.inOrderTraverseNode(this.root, callback);
+  }
+  inOrderTraverseNode(node, callback) {
+    if (node != null) {
+      this.inOrderTraverseNode(node.left, callback);
+      callback(node.key);
+      this.inOrderTraverseNode(node.right, callback);
+    }
+  }
+  preOrderTraverse(callback) { // 先序
+    this.preOrderTraverseNode(this.root, callback);
+  }
+  preOrderTraverseNode(node, callback) {
+    if (node != null) {
+      callback(node.key);
+      this.preOrderTraverseNode(node.left, callback);
+      this.preOrderTraverseNode(node.right, callback);
+    }
+  }
+
+  postOrderTraverse(callback) { // 后序
+    this.postOrderTraverseNode(this.root, callback);
+  }
+  postOrderTraverseNode(node, callback) {
+    if (node != null) {
+      this.postOrderTraverseNode(node.left, callback);
+      this.postOrderTraverseNode(node.right, callback);
+      callback(node.key);
+    }
+  }
+  min() {
+    return this.minNode(this.root);
+  }
+  minNode(node) {
+    let current = node;
+    while (current != null && current.left != null) {
+      current = current.left;
+    }
+    return current;
+  }
+  max() {
+    return this.maxNode(this.root);
+  }
+  maxNode(node) {
+    let current = node;
+    while (current != null && current.right != null) {
+      current = current.right;
+    }
+    return current;
+  }
+  search(key) {
+    return this.searchNode(this.root, key);
+  }
+  searchNode(node, key) {
+    if (node == null) {
+      return false;
+    }
+    if (this.compareFn(key, node.key) === Compare.LESS_THAN) {
+      return this.searchNode(node.left, key);
+    } else if (
+      this.compareFn(key, node.key) === Compare.BIGGER_THAN
+    ) { // {5}
+      return this.searchNode(node.right, key);
+    } else {
+      return true;
+    }
+  }
+  remove(key) {
+    this.root = this.removeNode(this.root, key);
+  }
+  removeNode(node, key) {
+    if (node == null) {
+      return null;
+    }
+    if (this.compareFn(key, node.key) === Compare.LESS_THAN) {
+      node.left = this.removeNode(node.left, key);
+      return node;
+    } else if (
+      this.compareFn(key, node.key) === Compare.BIGGER_THAN) {
+      node.right = this.removeNode(node.right, key);
+      return node;
+    } else {
+      // 键等于node.key
+      // 第一种情况
+      if (node.left == null && node.right == null) {
+        node = null;
+        return node;
+      }// 第二种情况
+      if (node.left == null) {
+        node = node.right;
+        return node;
+      } else if (node.right == null) {
+        node = node.left;
+        return node;
+      }// 第三种情况
+      const aux = this.minNode(node.right);
+      node.key = aux.key;
+      node.right = this.removeNode(node.right, aux.key);
+      return node;
+    }
+  }
+}
+```
+* 如果树非空，需要找到插入新节点的位置。因此，在调用insertNode 方法时要通过参数传入树的根节点和要插入的节点。
+  * 如果新节点的键小于当前节点的键（现在，当前节点就是根节点）那么需要检查当前节点的左侧子节点。注意在这里，由于键可能是复杂的对象而不是数，我们使用传入二叉搜索树构造函数的compareFn 函数来比较值。如果它没有左侧子节点，就在那里插入新的节点。如果有左侧子节点，需要通过递归调用insertNode方法继续找到树的下一层。在这里，下次要比较的节点将会是当前节点的左侧子节点（左侧节点子树）。
+  * 如果节点的键比当前节点的键大，同时当前节点没有右侧子节点，就在那里插入新的节点。如果有右侧子节点，同样需要递归调用insertNode 方法，但是要用来和新节点比较的节点将会是右侧子节点（右侧节点子树）。
+
+* 遍历一棵树:是指访问树的每个节点并对它们进行某种操作的过程。
+* 访问树的所有节点有三种方式：中序、先序和后序。
+* 中序遍历: 是一种以上行顺序访问BST 所有节点的遍历方式，也就是以从最小到最大的顺序访问所有节点。中序遍历的一种应用就是对树进行排序操作
+* 先序遍历：是以优先于后代节点的顺序访问每个节点的。先序遍历的一种应用是打印一个结构化的文档
+* 先序遍历和中序遍历的不同点是：先序遍历会先访问节点本身，然后再访问它的左侧子节点，最后是右侧子节点
+* 后序遍历：则是先访问节点的后代节点，再访问节点本身。后序遍历的一种应用是计算一个目录及其子目录中所有文件所占空间的大小。
