--- a/算法.md
+++ b/算法.md
@@ -1,6 +1,81 @@
-[一、算法](#一、算法)
-- [1.1 概念](#11-概念)
-- [1.2 类型 ](#12-类型 )
-- [1.2 interface ](#12-interface )
-- [1.3 public\protected\private和readonly](#13-public\protected\private和readonly)
-- [1.4 泛型](#14-泛型)
+
+[toc]
+
+# 一、排序
+## 1.1 冒泡排序
+
+>冒泡排序算法，它是最慢的排序算法之一，但也是一种最容易实现的排序算法。
+
+* 普通版
+```js
+let array = [3, 44, 38, 5, 47, 15, 36, 26, 27, 2, 46, 4, 19, 50, 48];
+function bubbleSort(arr) {
+  let numElements = arr.length;
+  for (let i = 0; i < arr.length; i++) {
+    for (let j = 0; j < arr.length; j++) {    
+      if (arr[i] < arr[j]) {
+        [arr[i], arr[j]] = [arr[j], arr[i]]
+      }
+    }
+  }
+}
+bubbleSort(array)
+```
+* 文艺版
+```js
+// 剩一个就不用排了 排过的就不用再比了
+let array = [3, 44, 38, 5, 47, 15, 36, 26, 27, 2, 46, 4, 19, 50, 48];
+function bubbleSort(arr) {
+  let numElements = arr.length;
+  for (let i = 0; i < numElements - 2; ++i) {
+    for (let j = 0; j <= numElements - 1 - i; ++j) {  
+      if (arr[j] > arr[j + 1]) {   
+        [arr[j + 1], arr[j]] = [arr[j], arr[j + 1]]
+      }
+    }
+  }
+}
+bubbleSort(array);
+```
+* 进化版
+```js
+function bubbleSort(arr) {
+  let numElements = arr.length;
+  let isDone = false;
+  let isSort = 0;
+  do {
+    isDone = false;
+    for (let i = 0; i < numElements - 1 - isSort; i++) {
+      if (arr[i] > arr[i + 1]) {
+        [arr[i], arr[i + 1]] = [arr[i + 1], arr[i]];
+        isDone = true;
+      }
+      console.log(1)
+    }
+    isSort++;
+  } while (isDone)
+}
+```
+
+## 1.2 选择排序
+>选择排序从数组的开头开始，将第一个元素和其他元素进行比较。检查完所有元素后，最小的元素会被放到数组的第一个位置，然后算法会从第二个位置继续。这个过程一直进行，当进行到数组的倒数第二个位置时，所有的数据便完成了排序。
+```js
+function selectSort(arr) {
+  let numEle = arr.length;
+  let min;
+  for (let i = 0; i < numEle; i++) {
+    min = i;
+    for (let j = i + 1; j < numEle; j++) {
+      if (arr[min] > arr[j]) {
+        min = j;
+      }
+    } [arr[i], arr[min]] = [arr[min], arr[i]]
+  }
+}
+```
+## 1.3 插入排序
+* 插入排序有两个循环：
+  * 外循环将数组元素挨个移动
+  * 内循环则对外循环中选中的元素及它后面的那个元素进行比较。
+
+>如果外循环中选中的元素比内循环中选中的元素小，那么数组元素会向右移动，为内循环中的这个元素腾出位置，就像之前介绍的姓氏卡片一样。
